feat: Service, Repository 고도화 및 테스트코드 설정