@@ -2,7 +2,7 @@ package com.sprint.mission.discodeit.service.basic;
 
 import com.sprint.mission.discodeit.dto.CreateBinaryContentRequest;
 import com.sprint.mission.discodeit.dto.CreateUserRequest;
-import com.sprint.mission.discodeit.dto.FindUserRequest;
+import com.sprint.mission.discodeit.dto.FindUserRespond;
 import com.sprint.mission.discodeit.dto.UpdateUserRequest;
 import com.sprint.mission.discodeit.entitiy.BinaryContent;
 import com.sprint.mission.discodeit.entitiy.User;
@@ -13,69 +13,67 @@ import com.sprint.mission.discodeit.repository.UserStatusRepository;
 import com.sprint.mission.discodeit.service.UserService;
 import com.sun.jdi.request.DuplicateRequestException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class BasicUserService implements UserService {
 
-    UserRepository userRepository;
-    UserStatusRepository userStatusRepository;
-    BinaryContentRepository binaryContentRepository;
+    private final UserRepository userRepository;
+    private final UserStatusRepository userStatusRepository;
+    private final BinaryContentRepository binaryContentRepository;
+
 
     @Override
-    public User create(CreateUserRequest request) {
-        User user = new User(request.username(), request.password(), request.email(), null);
+    public User create(CreateUserRequest userRequest, Optional<CreateBinaryContentRequest> binaryContentRequest) {
+        User user = new User(userRequest.username(), userRequest.password(), userRequest.email(), null);
         //중복검사후 아닐경우 save
         try{
-            if(!userRepository.duplicateCheck(user)){
+            if(!userRepository.duplicateCheck(user)) {
                 userRepository.save(user);
                 userStatusRepository.save(new UserStatus(user.getId()));
+                if (binaryContentRequest.isPresent()) {
+                    BinaryContent binaryContent = new BinaryContent(binaryContentRequest.get().contentType(), binaryContentRequest.get().content());
+                    binaryContentRepository.save(binaryContent);
+                }
                 return user;
             }else
                 throw new DuplicateRequestException();
-        }catch (DuplicateRequestException e){
-            e.printStackTrace();
+        }catch (DuplicateRequestException e) {
+            System.out.println("중복된 name 또는 email 입니다.");
         }
-
+        return null;
     }
 
     @Override
-    public User create(CreateUserRequest userRequest, CreateBinaryContentRequest binaryContentRequest) {
-        User user = create(userRequest);
-        BinaryContent binaryContent = new BinaryContent(binaryContentRequest.contentType(), binaryContentRequest.content());
-        binaryContentRepository.save(binaryContent);
-        return user;
-    }
-
-    @Override
-    public List<FindUserRequest> findAll() {
+    public List<FindUserRespond> findAll() {
         List<User> userList = userRepository.read();
-        List<FindUserRequest> findUserRequestList = new ArrayList<>();
-        findUserRequestList = userList.stream()
-                .map(user->new FindUserRequest(user.getId(),user.getProfileId(),user.getCreatedAt(),user.getUpdatedAt(),user.getUsername(),user.getEmail(),user.getFriends(),userStatusRepository.readById(user.getId()).get()))
-                .toList();
-        return findUserRequestList;
+        List<FindUserRespond> findUserRespondList = new ArrayList<>();
+        findUserRespondList = userList.stream()
+                .map(user->new FindUserRespond(user.getId(),user.getProfileId(),user.getCreatedAt(),user.getUpdatedAt(),user.getUsername(),user.getEmail(),user.getFriends(),userStatusRepository.readByUserId(user.getId()).get()))
+                .collect(Collectors.toList());
+        return findUserRespondList;
     }
 
     @Override
-    public FindUserRequest find(UUID id) {
+    public FindUserRespond find(UUID id) {
         Optional<User> user = userRepository.readById(id);
         try {
             if (user.isPresent()) {
-                FindUserRequest findUserRequest = new FindUserRequest(user.get().getId(), user.get().getProfileId(), user.get().getCreatedAt(), user.get().getUpdatedAt(), user.get().getUsername(), user.get().getEmail(), user.get().getFriends(), userStatusRepository.readById(user.get().getId()).get());
-                return findUserRequest;
+                FindUserRespond findUserRespond = new FindUserRespond(user.get().getId(), user.get().getProfileId(), user.get().getCreatedAt(), user.get().getUpdatedAt(), user.get().getUsername(), user.get().getEmail(), user.get().getFriends(), userStatusRepository.readByUserId(user.get().getId()).get());
+                return findUserRespond;
             } else {
-                throw new ClassNotFoundException();
+                throw new NoSuchElementException("존재하지 않는 id 입니다.");
             }
-        }catch (ClassNotFoundException e){
-            System.out.println("존재하지 않는 id 입니다.");;
+        }catch (NoSuchElementException e){
+            System.out.println(e);
+            return null;
         }
+
     }
 
     @Override
@@ -96,9 +94,24 @@ public class BasicUserService implements UserService {
     }
 
     @Override
-    public void delete(User user) {
-        userStatusRepository.delete(userStatusRepository.readById(user.getId()).get());
-        binaryContentRepository.delete(binaryContentRepository.readById(user.getId()).get());
-        userRepository.delete(user);
+    public void delete(UUID userId) {
+        Optional<User> user = userRepository.readById(userId);
+        UUID profileId;
+        try {
+            if (user.isPresent()) {
+                User user1 = user.get();
+                profileId = user1.getProfileId();
+                UserStatus userStatus = userStatusRepository.readByUserId(user1.getId()).get();
+                userStatusRepository.delete(userStatus.getId());
+                binaryContentRepository.delete(profileId);
+                userRepository.delete(userId);
+            } else {
+                throw new NoSuchElementException("존재하지 않는 userId입니다.");
+            }
+        }
+        catch (NoSuchElementException e){
+            System.out.println(e);
+        }
+
     }
 }
